style: fixed issue with images in a modal overflowing

--- a/src/components/Carousel/Carousel.scss
+++ b/src/components/Carousel/Carousel.scss
@@ -8,6 +8,7 @@
   padding: 1rem;
   background-color: rgba(0, 0, 0, 0.384);
   border-radius: 16px;
+  overflow: hidden;
 
   button {
     position: absolute;
@@ -41,12 +42,13 @@
   }
 
   .carousel-item {
-    width: fit-content;
+    display: flex;
+    justify-content: center;
     
     img {
-      object-fit: contain;
       width: 100%;
-      height: auto;
+      height: 100%;
+      object-fit: contain;
     }
   }
 }
