--- a/src/components/Modal/Modal.scss
+++ b/src/components/Modal/Modal.scss
@@ -1,31 +1,30 @@
+@import "../../styles/variables.scss";
+@import "../../styles/colors.scss";
+
 .modal {
   position: fixed;
-  top: 50%;
+  top: 40%;
   left: 50%;
   transform: translate(-50%, -50%);
-  width: 90%;
-  height: 90%;
-  background-color: rgba(0, 0, 0, 0.5);
+  width: 100%;
+  height: 100%;
   display: flex;
   justify-content: center;
   align-items: center;
   z-index: 100;
 
   .modal-content {
-    background-color: white;
-    width: 100%;
-    height: 100%;
-    padding: 20px;
-    box-shadow: 0 5px 15px rgba(0, 0, 0, 0.3);
-    position: relative;
+    display: flex;
+    flex-direction: column;
+    width: 90%;
+    max-width: map-get($breakpoints, "lg");
   }
   
   .close-button {
-    position: absolute;
-    top: 10px;
-    right: 20px;
+    align-self: flex-end;
     font-size: 30px;
     cursor: pointer;
     z-index: 101;
+    color: map-get($colors, "accent-yellow");
   }
 }
