--- a/src/sections/ProjectsSection/ProjectsSection.scss
+++ b/src/sections/ProjectsSection/ProjectsSection.scss
@@ -12,12 +12,6 @@
       margin-bottom: 2rem;
     }
 
-    .image-wrapper {
-      width: 100%;
-      height: 100%;
-      padding-right: 1.5rem;
-    }
-
     h3 {
       display: flex;
       align-items: center;
